edit link for credit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><strong>1964</strong> - appeared in the James Bond film <a href="https://en.wikipedia.org/wiki/Goldfinger_(film)">Goldfinger</a></li>
           <li><strong>1965</strong> - production stopped with a total of 1,059 units produced</li>
           <li><strong>1970</strong> - first reported accident featuring a DB5</li>
-          <li><strong>1998</strong> - the last functioning DB5 is bought by autocar tuner Karl for $500,000 at an auction in Germany</li>
+          <li><strong>1998</strong> - the last functioning DB5 is bought by <a href="https://khyzylsaleem.artstation.com/">KHYZYL SALEEM</a> in Germany</li>
           <li><strong>2019</strong> - the last time the Aston Martin DB5 was last seen</li>
         </ul>
         <blockquote>
